fixed z-index pos for panel-menu compared to dashboard search dropdown, #1483

--- a/src/css/less/panel.less
+++ b/src/css/less/panel.less
@@ -121,7 +121,7 @@
 }
 
 .panel-menu {
-  z-index: 1000;
+  z-index: 500;
   position: absolute;
   background: @grafanaTargetFuncBackground;
   border: 1px solid black;
